# GuardianAngel

./: package-lock.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
backend/: .env.example  .gitignore  buffer.geojson  data.py  database.py  dependencies.py  main.py  pyproject.toml  requirements.txt  settings.py  test_tracking.py  tracking.py  transformator.py  user_location_manager.py  users.db
backend/app/: utils.py
backend/app/models/alchemy/: __init__.py  route.py  user.py
backend/app/models/pyd/: route.py  user.py
backend/app/pubsub/: live_data.py  tracking_task.py
backend/app/repositories/: google_maps.py  valkey.py
backend/app/routers/: __init__.py  events.py  friends.py  people.py  routes.py  users.py  websocket.py
backend/app/schemas/: events.py  geo_json.py  route.py
backend/app/services/: geo_service.py  user_location_service.py  websocket_manager.py
backend/app/types/: general.py  tracking.py
backend/app/websocket/: connection_manager.py  errors.py  messages.py  outbound_messages.py  websocket_connection.py
backend/models/alchemy/: __init__.py  user.py
frontend/: app.json  package-lock.json  package.json  tamagui-web.css  tamagui.config.ts  tsconfig.json
frontend/app/: Provider.tsx  _layout.tsx  index.tsx  map.tsx
frontend/app/(auth)/: sign-in.tsx  sign-up.tsx
frontend/app/(home)/: map.tsx
frontend/app/(stack)/: addGuardians.tsx
frontend/components/: AddGuardianBottomView.tsx  BottomSheetHeader.tsx  Headings.tsx  PanicButton.tsx  PrimaryBtn.tsx  SelectedRouteBottomView.tsx  SignOutButton.tsx
frontend/constants/: Key.ts
frontend/hooks/: useLocationTracker.ts  useSendWebsocket.ts  useToken.ts  useWebSocketEvent.ts
frontend/lib/: BackgroundLocation.ts  location.ts  socket.ts
frontend/provider/: websocket.tsx
frontend/websocket/: WebSocketClient.ts  types.ts
