[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Mykhailo Danylenko",email = "dron7432@gmial.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (==0.115.12)",
    "python-jose[cryptography] (==3.4.0)",
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "bcrypt (==3.2.2)",
    "certifi (==2025.4.26)",
    "cffi (==1.17.1)",
    "click (==8.1.8)",
    "colorama (==0.4.6)",
    "dnspython (==2.7.0)",
    "email-validator (==2.2.0)",
    "fastapi-cli (==0.0.7)",
    "greenlet (==3.2.1)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httptools (==0.6.4)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "jinja2 (==3.1.6)",
    "markdown-it-py (==3.0.0)",
    "markupsafe (==3.0.2)",
    "mdurl (==0.1.2)",
    "passlib (==1.7.4)",
    "pycparser (==2.22)",
    "pydantic (==2.11.4)",
    "pydantic-core (==2.33.2)",
    "pygments (==2.19.1)",
    "pyjwt (==2.10.1)",
    "python-dotenv (==1.1.0)",
    "python-multipart (==0.0.20)",
    "pyyaml (==6.0.2)",
    "rich (==14.0.0)",
    "rich-toolkit (==0.14.4)",
    "shellingham (==1.5.4)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.40)",
    "starlette (==0.46.2)",
    "typer (==0.15.3)",
    "typing-inspection (==0.4.0)",
    "typing-extensions (==4.13.2)",
    "uvicorn (==0.34.2)",
    "watchfiles (==1.0.5)",
    "websockets (==15.0.1)",
    "google-auth (==2.40.1)",
    "requests (==2.32.3)",
    "valkey[hiredis] (>=6.1.0,<7.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "clerk-backend-api (>=2.2.0,<3.0.0)",
    "googlemaps (>=4.10.0,<5.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "polyline (>=2.0.2,<3.0.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "pyproj (>=3.7.1,<4.0.0)",
    "isodate (>=0.7.2,<0.8.0)",
    "aioredis (>=2.0.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
